--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,21 @@
+<div>
 <h1>Display your Pirate here</h1>
+Pirate Name: <%= @pirate.name %>
+<br>
+Pirate Weight: <%= @pirate.weight %>
+<br>
+Pirate Height: <%= @pirate.height %>
+<br>
+</div>
 
-
+<div>
 <h2>Display your first ship here</h2>
-
-
+First Ship Name: <%= @ships[0].name %><br>
+First Ship Type: <%= @ships[0].type %><br>
+First Ship Booty: <%= @ships[0].booty%><br>
+<br>
 <h2>Display your second ship here</h2>
+Second Ship Name: <%= @ships[1].name %><br>
+Second Ship Type: <%= @ships[1].type %><br>
+Second Ship Booty: <%= @ships[1].booty %><br>
+</div>
